namespace RPG.Utility
{
    public static class Constants
    {
        public const string PLAYER_TAG = "Player";
        public const string ENEMY_TAG = "Enemy";
        public const string SPEED_ANIMATOR_PARAM = "speed";
        public const string IS_SHAKING_ANIMATOR_PARAM = "isShaking";
        public const string ATTACK_ANIMATOR_PARAM = "attack";
        public const string DEFEATED_ANIMATOR_PARAM = "defeated";
        public const string CAMERA_TAG = "MainCamera";
        public const string GAME_MANAGER_TAG = "GameManager";
        public const string GAMEPLAY_ACTION_MAP = "Gameplay";
        public const string UI_ACTION_MAP = "UI";
        public const string AXE_TAG = "Axe";
        public const string SWORD_TAG = "Sword";
        public const string NPC_QUEST_TAG = "NPCWithQuest";
        public const string BOSS_TAG = "Boss";
    }
}

